<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lbl_simplex"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/lstSimp"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_weight="1"></ListView>

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/accion_modificar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/accion_eliminar" />

</LinearLayout>